crates/hdx_lexer/tests/snapshots/postcss_snapshots__postcss_atrule_no_params.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: "get_tokens(\"../../tasks/coverage/postcss-parser-tests/cases/atrule-no-params.css\".into())"
---
[
  {
    "kind": "AtKeyword",
    "value": "page"
  },
  {
    "kind": "LeftCurly"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "RightCurly"
  },
  {
    "kind": "Whitespace"
  }
]
