crates/hdx_lexer/tests/snapshots/postcss_snapshots__postcss_between.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: "get_tokens(\"../../tasks/coverage/postcss-parser-tests/cases/between.css\".into())"
---
[
  {
    "kind": "Ident",
    "value": "a"
  },
  {
    "kind": "Comment",
    "value": ""
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "LeftCurly"
  },
  {
    "kind": "RightCurly"
  },
  {
    "kind": "Whitespace"
  }
]
