crates/hdx_lexer/tests/snapshots/postcss_snapshots__postcss_colon_selector.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: "get_tokens(\"../../tasks/coverage/postcss-parser-tests/cases/colon-selector.css\".into())"
---
[
  {
    "kind": "Colon"
  },
  {
    "kind": "Ident",
    "value": "fullscreen"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "LeftCurly"
  },
  {
    "kind": "RightCurly"
  },
  {
    "kind": "Whitespace"
  }
]
